# RJD

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  прочитай, тут готка с молоком 3го размера.txt
media-center/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
media-center/include/: camera-threads-varan.h  camera.h  console_utility.h  drm_frame.h  errors.h  icamera_signaling.h  iwebsocket_client.h  logger.h  media_center.h  safe_buffers.h  signaling.h  signaling_definers.h  video_utility.h
media-center/server/: server.py
media-center/src/: camera-threads-varan.cpp  camera.cpp  media_center.cpp  signaling.cpp
media-center/webrtc-client/: index.html
media-center/webrtc-client/css/: style.css
media-center/webrtc-client/js/: connection.js
python-varan/: Dockerfile  camera.py  logger.py  main.py  main_config.py  manager.py  neural_loader.py  readme.md  requirements.txt  server.py  test_websocket.html  test_yolo.py  utility.py  yolo.py
python-varan/client/: client.html
python-varan/models/classes/: classes-coco.json
python-varan/save/: dump.json
shit/: readme.txt
shit/backend/: .dockerignore  .env  Dockerfile  Pipfile
shit/backend/app/: Dockerfile  api.py  config.py  main.py  requirements.txt
shit/backend/app/models/: camera.py  init.py  loader.py
shit/backend/app/routers/: __init__.py  cameras.py  loaders.py  status.py  streams.py
shit/backend/app/services/: __init__.py  flask_client.py  websocket_manager.py
shit/frontend/: .env  package-lock.json  package.json
shit/frontend/src/: App.tsx  main.tsx
video-recorder/: Dockerfile  benchmark.py  deploy.sh  docker-compose.yml  ntp_sync_server.py  requirements.txt  test_cameras.py  video_recorder.py
video-recorder/config/: cameras.yaml  ntp.yaml  recording.yaml
